fixed icon label spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -451,6 +451,7 @@ h3 a{
   font-size: 1.1rem;
   color: white;
   text-shadow: 1px 1px 2px black,-1px -1px 2px black;
+  transform: translate(0, -100%);
 }
 
 .education {
